# Inbound-TMS

./: .gitignore  Dockerfile  LICENSE  README.md  build_executable.sh  inbound_tms_diagram_app.py  pyproject.toml
.github/workflows/: build.yml
tests/: test_plantuml.py
